@@ -1,0 +1,1 @@
+ACTION="change", SUBSYSTEM="drm", HOTPLUG="1", RUN+="/usr/local/bin/custom_scripts/hdmi_autoconnect.sh"
